--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
             <h3 class="title">Наша команда</h3>
             <ul class="list">
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                     <img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="teame">Игорь Демьяненко</h3>
+                    <p class="profession" lang="en">Product Designer</p>
                 </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                     <img src="./images/photo2.jpg" alt="Ольга Репина" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="teame">Ольга Репина</h3>
+                    <p class="profession" lang="en">Frontend Developer</p>
                 </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                     <img src="./images/photo3.jpg" alt="Николай Тарасов" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="teame">Николай Тарасов</h3>
+                    <p class="profession" lang="en">Marketing</p>
                 </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                     <img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="teame">Михаил Ермаков</h3>
+                    <p class="profession" lang="en">UI Designer</p>
                 </a>
                 </li>
             </ul>
@@ -123,7 +123,7 @@
                     <a class="link link-theme-light" href="">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a class="link link-theme-dark" href="mailto:info@example.com">info@example.com></a>
+                    <a class="link link-theme-dark" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
                     <a class="link link-theme-dark" href="tel:+38(099)1111111">+38 (099) 111 11 11</a>
