--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <!--Секция "Кнопки навигации"-->
-        <div>
+        <section>
             <!--<h1>Кнопки навигации</h1>-->
             <ul class="list">
                 <li>
@@ -59,75 +59,73 @@
                     <button class="modal-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
-        </div>
-        <div>
             <!--<h2>Иконки проектов</h2>-->
             <ul class="list">
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon1.jpg" alt="Ноутбук с открытой страницей сайта" width="370">
                         <h3 class="project-name">Технокряк</h3>
                         <p class="project">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon2.jpg" alt="Игра двоих баскетболистов" width="370">
                         <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                         <p class="project">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon3.jpg" alt="Логотип ресторана Seafood" width="370">
                         <h3 class="project-name">Ресторан Seafood</h3>
                         <p class="project">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon4.jpg" alt="Накладные наушники" width="370">
                         <h3 class="project-name">Проект Prime</h3>
                         <p class="project">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon5.jpg" alt="Две коробки" width="370">
                         <h3 class="project-name">Проект Boxes</h3>
                         <p class="project">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon6.jpg" alt="Изображон копьютер" width="370">
                         <h3 lang="en" class="project-name">Inspiration has no Borders</h3>
                         <p class="project">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon7.jpg" alt="Открытая книга" width="370">
                         <h3 class="project-name">Издание Limited Edition</h3>
                         <p class="project">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon8.jpg" alt="Картинка логотип Проект LAB" width="370">
                         <h3 class="project-name">Проект LAB</h3>
                         <p class="project">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/imgikon9.jpg" alt="Печатает на ноутбуке" width="370">
                         <h3 class="project-name">Growing Business</h3>
                         <p class="project">Приложение</p>
                     </a>
                 </li>
             </ul>
-        </div>
+        </section>
     </main>
     <!--Подвал-->
     <footer class="footer-color">
@@ -138,7 +136,7 @@
                     <a class="link link-theme-light" href="">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a class="link link-theme-dark" href="mailto:info@example.com">info@example.com></a>
+                    <a class="link link-theme-dark" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
                     <a class="link link-theme-dark" href="tel:+38(099)1111111">+38 (099) 111 11 11</a>
